# strawberry-lemonade

./: main.py  meson.build  start.sh  test.py
src/: main.py  meson.build  start.sh  strawberry_lemonade.in  test.py
